Delete old localization for gem
Use something more mmo instead

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -180,83 +180,98 @@
 	"item.mmorpg.backpack.upgrade.auto_sal2": "自动回收稀有级升级",
 	"item.mmorpg.backpack.upgrade.currency3": "自动通货拾取升级",
 	"item.mmorpg.backpack.upgrade.essence0": "自动源质拾取升级",
-	"item.mmorpg.backpack.upgrade.gem1": "Auto Gem Pickup Upgrade",
-	"item.mmorpg.backpack.upgrade.rune2": "Auto Rune Pickup Upgrade",
-	"item.mmorpg.backpack.upgrade.save1": "Save Important Items Upgrade",
-	"item.mmorpg.backpack.upgrade.size0": "Spiritual Size Upgrade",
-	"item.mmorpg.backpack.upgrade.size1": "Celestial Size Upgrade",
-	"item.mmorpg.backpack.upgrade.size2": "Empyrean Size Upgrade",
-	"item.mmorpg.backpack.upgrade.size3": "Angelic Size Upgrade",
-	"item.mmorpg.backpack.upgrade.size4": "Divine Size Upgrade",
-	"item.mmorpg.backpack.upgrade.trash0": "Auto Trash Pickup Upgrade",
-	"item.mmorpg.common_soul_produce": "Common Gear Soul Stone",
-	"item.mmorpg.gear_mat.cloth.cloth0": "下品布匹",
-	"item.mmorpg.gear_mat.cloth.cloth1": "中品布匹",
-	"item.mmorpg.gear_mat.cloth.cloth2": "上品布匹",
-	"item.mmorpg.gear_mat.cloth.cloth3": "精品布匹",
-	"item.mmorpg.gear_mat.cloth.cloth4": "珍品布匹",
-	"item.mmorpg.gear_mat.essences.arcana": "神秘源质",
-	"item.mmorpg.gear_mat.essences.elemental": "元素源质",
-	"item.mmorpg.gear_mat.essences.fire": "火焰源质",
-	"item.mmorpg.gear_mat.essences.life": "生命源质",
-	"item.mmorpg.gear_mat.essences.nature": "自然源质",
-	"item.mmorpg.gear_mat.essences.thunder": "雷电源质",
-	"item.mmorpg.gear_mat.essences.water": "流水源质",
-	"item.mmorpg.gear_mat.leather.leather0": "下品皮革",
-	"item.mmorpg.gear_mat.leather.leather1": "中品皮革",
-	"item.mmorpg.gear_mat.leather.leather2": "上品皮革",
-	"item.mmorpg.gear_mat.leather.leather3": "精品皮革",
-	"item.mmorpg.gear_mat.leather.leather4": "珍品皮革",
-	"item.mmorpg.gear_mat.ore.ore0": "下品矿石",
-	"item.mmorpg.gear_mat.ore.ore1": "中品矿石",
-	"item.mmorpg.gear_mat.ore.ore2": "上品矿石",
-	"item.mmorpg.gear_mat.ore.ore3": "精品矿石",
-	"item.mmorpg.gear_mat.ore.ore4": "珍品矿石",
-	"item.mmorpg.gems.amethyst.0": "下品紫水晶",
-	"item.mmorpg.gems.amethyst.1": "中品紫水晶",
-	"item.mmorpg.gems.amethyst.2": "上品紫水晶",
-	"item.mmorpg.gems.amethyst.3": "精品紫水晶",
-	"item.mmorpg.gems.amethyst.4": "珍品紫水晶",
-	"item.mmorpg.gems.azurite.0": "下品青水晶",
-	"item.mmorpg.gems.azurite.1": "中品青水晶",
-	"item.mmorpg.gems.azurite.2": "上品青水晶",
-	"item.mmorpg.gems.azurite.3": "精品青水晶",
-	"item.mmorpg.gems.azurite.4": "珍品青水晶",
-	"item.mmorpg.gems.emerald.0": "下品绿水晶",
-	"item.mmorpg.gems.emerald.1": "中品绿水晶",
-	"item.mmorpg.gems.emerald.2": "上品绿水晶",
-	"item.mmorpg.gems.emerald.3": "精品绿水晶",
-	"item.mmorpg.gems.emerald.4": "珍品绿水晶",
-	"item.mmorpg.gems.garnet.0": "下品黄绿水晶",
-	"item.mmorpg.gems.garnet.1": "中品黄绿水晶",
-	"item.mmorpg.gems.garnet.2": "上品黄绿水晶",
-	"item.mmorpg.gems.garnet.3": "精品黄绿水晶",
-	"item.mmorpg.gems.garnet.4": "珍品黄绿水晶",
-	"item.mmorpg.gems.opal.0": "下品橙水晶",
-	"item.mmorpg.gems.opal.1": "中品橙水晶",
-	"item.mmorpg.gems.opal.2": "上品橙水晶",
-	"item.mmorpg.gems.opal.3": "精品橙水晶",
-	"item.mmorpg.gems.opal.4": "珍品橙水晶",
-	"item.mmorpg.gems.ruby.0": "下品红水晶",
-	"item.mmorpg.gems.ruby.1": "中品红水晶",
-	"item.mmorpg.gems.ruby.2": "上品红水晶",
-	"item.mmorpg.gems.ruby.3": "精品红水晶",
-	"item.mmorpg.gems.ruby.4": "珍品红水晶",
-	"item.mmorpg.gems.sapphire.0": "下品蓝水晶",
-	"item.mmorpg.gems.sapphire.1": "中品蓝水晶",
-	"item.mmorpg.gems.sapphire.2": "上品蓝水晶",
-	"item.mmorpg.gems.sapphire.3": "精品蓝水晶",
-	"item.mmorpg.gems.sapphire.4": "珍品蓝水晶",
-	"item.mmorpg.gems.topaz.0": "下品黄水晶",
-	"item.mmorpg.gems.topaz.1": "中品黄水晶",
-	"item.mmorpg.gems.topaz.2": "上品黄水晶",
-	"item.mmorpg.gems.topaz.3": "精品黄水晶",
-	"item.mmorpg.gems.topaz.4": "珍品黄水晶",
-	"item.mmorpg.gems.tourmaline.0": "下品粉水晶",
-	"item.mmorpg.gems.tourmaline.1": "中品粉水晶",
-	"item.mmorpg.gems.tourmaline.2": "上品粉水晶",
-	"item.mmorpg.gems.tourmaline.3": "精品粉水晶",
-	"item.mmorpg.gems.tourmaline.4": "珍品粉水晶",
+	"item.mmorpg.backpack.upgrade.gem1": "自动宝石拾取升级",
+	"item.mmorpg.backpack.upgrade.rune2": "自动符文拾取升级",
+	"item.mmorpg.backpack.upgrade.save1": "保留重要物品升级",
+	"item.mmorpg.backpack.upgrade.size0": "灵魂级空间扩容",
+	"item.mmorpg.backpack.upgrade.size1": "天界级空间扩容",
+	"item.mmorpg.backpack.upgrade.size2": "帝王级空间扩容",
+	"item.mmorpg.backpack.upgrade.size3": "天使级空间扩容",
+	"item.mmorpg.backpack.upgrade.size4": "神圣级空间扩容",
+	"item.mmorpg.backpack.upgrade.trash0": "自动垃圾拾取升级",
+	"item.mmorpg.common_soul_produce": "普通级装备灵魂石",
+	"item.mmorpg.craft_result.alchemy.1": "酿制药水",
+	"item.mmorpg.craft_result.alchemy.2": "酿制药水",
+	"item.mmorpg.craft_result.alchemy.3": "酿制药水",
+	"item.mmorpg.craft_result.alchemy.4": "酿制药水",
+	"item.mmorpg.craft_result.cooking.1": "烹制食物",
+	"item.mmorpg.craft_result.cooking.2": "烹制食物",
+	"item.mmorpg.craft_result.cooking.3": "烹制食物",
+	"item.mmorpg.craft_result.cooking.4": "烹制食物",
+	"item.mmorpg.craft_result.cooking.5": "烹制食物",
+	"item.mmorpg.craft_result.inscribing.1": "强化的卷轴",
+	"item.mmorpg.craft_result.inscribing.2": "强化的卷轴",
+	"item.mmorpg.craft_result.inscribing.3": "强化的卷轴",
+	"item.mmorpg.craft_result.inscribing.4": "强化的卷轴",
+	"item.mmorpg.craft_tools.alchemy": "药剂师的臼",
+	"item.mmorpg.craft_tools.armor_craft": "制甲匠的布艺",
+	"item.mmorpg.craft_tools.cooking": "厨师之釜",
+	"item.mmorpg.craft_tools.inscribing": "抄写员的织物",
+	"item.mmorpg.craft_tools.jewel_craft": "珠宝匠的工具",
+	"item.mmorpg.craft_tools.wep_craft": "武器工匠之锤",
+	"item.mmorpg.gems.amethyst.0": "碎裂的紫水晶",
+	"item.mmorpg.gems.amethyst.1": "裂纹的紫水晶",
+	"item.mmorpg.gems.amethyst.2": "瑕疵的紫水晶",
+	"item.mmorpg.gems.amethyst.3": "普通的紫水晶",
+	"item.mmorpg.gems.amethyst.4": "恢弘的紫水晶",
+	"item.mmorpg.gems.amethyst.5": "辉耀的紫水晶",
+	"item.mmorpg.gems.amethyst.6": "神圣的紫水晶",
+	"item.mmorpg.gems.azurite.0": "Cracked Azurite",
+	"item.mmorpg.gems.azurite.1": "Chipped Azurite",
+	"item.mmorpg.gems.azurite.2": "Flawed Azurite",
+	"item.mmorpg.gems.azurite.3": "Regular Azurite",
+	"item.mmorpg.gems.azurite.4": "Grand Azurite",
+	"item.mmorpg.gems.azurite.5": "Glorious Azurite",
+	"item.mmorpg.gems.azurite.6": "Divine Azurite",
+	"item.mmorpg.gems.emerald.0": "Cracked Emerald",
+	"item.mmorpg.gems.emerald.1": "Chipped Emerald",
+	"item.mmorpg.gems.emerald.2": "Flawed Emerald",
+	"item.mmorpg.gems.emerald.3": "Regular Emerald",
+	"item.mmorpg.gems.emerald.4": "Grand Emerald",
+	"item.mmorpg.gems.emerald.5": "Glorious Emerald",
+	"item.mmorpg.gems.emerald.6": "Divine Emerald",
+	"item.mmorpg.gems.garnet.0": "Cracked Garnet",
+	"item.mmorpg.gems.garnet.1": "Chipped Garnet",
+	"item.mmorpg.gems.garnet.2": "Flawed Garnet",
+	"item.mmorpg.gems.garnet.3": "Regular Garnet",
+	"item.mmorpg.gems.garnet.4": "Grand Garnet",
+	"item.mmorpg.gems.garnet.5": "Glorious Garnet",
+	"item.mmorpg.gems.garnet.6": "Divine Garnet",
+	"item.mmorpg.gems.opal.0": "Cracked Opal",
+	"item.mmorpg.gems.opal.1": "Chipped Opal",
+	"item.mmorpg.gems.opal.2": "Flawed Opal",
+	"item.mmorpg.gems.opal.3": "Regular Opal",
+	"item.mmorpg.gems.opal.4": "Grand Opal",
+	"item.mmorpg.gems.opal.5": "Glorious Opal",
+	"item.mmorpg.gems.opal.6": "Divine Opal",
+	"item.mmorpg.gems.ruby.0": "Cracked Ruby",
+	"item.mmorpg.gems.ruby.1": "Chipped Ruby",
+	"item.mmorpg.gems.ruby.2": "Flawed Ruby",
+	"item.mmorpg.gems.ruby.3": "Regular Ruby",
+	"item.mmorpg.gems.ruby.4": "Grand Ruby",
+	"item.mmorpg.gems.ruby.5": "Glorious Ruby",
+	"item.mmorpg.gems.ruby.6": "Divine Ruby",
+	"item.mmorpg.gems.sapphire.0": "Cracked Sapphire",
+	"item.mmorpg.gems.sapphire.1": "Chipped Sapphire",
+	"item.mmorpg.gems.sapphire.2": "Flawed Sapphire",
+	"item.mmorpg.gems.sapphire.3": "Regular Sapphire",
+	"item.mmorpg.gems.sapphire.4": "Grand Sapphire",
+	"item.mmorpg.gems.sapphire.5": "Glorious Sapphire",
+	"item.mmorpg.gems.sapphire.6": "Divine Sapphire",
+	"item.mmorpg.gems.topaz.0": "Cracked Topaz",
+	"item.mmorpg.gems.topaz.1": "Chipped Topaz",
+	"item.mmorpg.gems.topaz.2": "Flawed Topaz",
+	"item.mmorpg.gems.topaz.3": "Regular Topaz",
+	"item.mmorpg.gems.topaz.4": "Grand Topaz",
+	"item.mmorpg.gems.topaz.5": "Glorious Topaz",
+	"item.mmorpg.gems.topaz.6": "Divine Topaz",
+	"item.mmorpg.gems.tourmaline.0": "Cracked Tourmaline",
+	"item.mmorpg.gems.tourmaline.1": "Chipped Tourmaline",
+	"item.mmorpg.gems.tourmaline.2": "Flawed Tourmaline",
+	"item.mmorpg.gems.tourmaline.3": "Regular Tourmaline",
+	"item.mmorpg.gems.tourmaline.4": "Grand Tourmaline",
+	"item.mmorpg.gems.tourmaline.5": "Glorious Tourmaline",
+	"item.mmorpg.gems.tourmaline.6": "Divine Tourmaline",
 	"item.mmorpg.loot_crate.ench_exp_bag": "附魔经验箱",
 	"item.mmorpg.mat.modify_part": "幻想核心",
 	"item.mmorpg.mat.salvage.salvage0": "T0 - 回收粉尘",
