--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -216,62 +216,62 @@
 	"item.mmorpg.gems.amethyst.4": "恢弘的紫水晶",
 	"item.mmorpg.gems.amethyst.5": "辉耀的紫水晶",
 	"item.mmorpg.gems.amethyst.6": "神圣的紫水晶",
-	"item.mmorpg.gems.azurite.0": "Cracked Azurite",
-	"item.mmorpg.gems.azurite.1": "Chipped Azurite",
-	"item.mmorpg.gems.azurite.2": "Flawed Azurite",
-	"item.mmorpg.gems.azurite.3": "Regular Azurite",
-	"item.mmorpg.gems.azurite.4": "Grand Azurite",
-	"item.mmorpg.gems.azurite.5": "Glorious Azurite",
-	"item.mmorpg.gems.azurite.6": "Divine Azurite",
-	"item.mmorpg.gems.emerald.0": "Cracked Emerald",
-	"item.mmorpg.gems.emerald.1": "Chipped Emerald",
-	"item.mmorpg.gems.emerald.2": "Flawed Emerald",
-	"item.mmorpg.gems.emerald.3": "Regular Emerald",
-	"item.mmorpg.gems.emerald.4": "Grand Emerald",
-	"item.mmorpg.gems.emerald.5": "Glorious Emerald",
-	"item.mmorpg.gems.emerald.6": "Divine Emerald",
-	"item.mmorpg.gems.garnet.0": "Cracked Garnet",
-	"item.mmorpg.gems.garnet.1": "Chipped Garnet",
-	"item.mmorpg.gems.garnet.2": "Flawed Garnet",
-	"item.mmorpg.gems.garnet.3": "Regular Garnet",
-	"item.mmorpg.gems.garnet.4": "Grand Garnet",
-	"item.mmorpg.gems.garnet.5": "Glorious Garnet",
-	"item.mmorpg.gems.garnet.6": "Divine Garnet",
-	"item.mmorpg.gems.opal.0": "Cracked Opal",
-	"item.mmorpg.gems.opal.1": "Chipped Opal",
-	"item.mmorpg.gems.opal.2": "Flawed Opal",
-	"item.mmorpg.gems.opal.3": "Regular Opal",
-	"item.mmorpg.gems.opal.4": "Grand Opal",
-	"item.mmorpg.gems.opal.5": "Glorious Opal",
-	"item.mmorpg.gems.opal.6": "Divine Opal",
-	"item.mmorpg.gems.ruby.0": "Cracked Ruby",
-	"item.mmorpg.gems.ruby.1": "Chipped Ruby",
-	"item.mmorpg.gems.ruby.2": "Flawed Ruby",
-	"item.mmorpg.gems.ruby.3": "Regular Ruby",
-	"item.mmorpg.gems.ruby.4": "Grand Ruby",
-	"item.mmorpg.gems.ruby.5": "Glorious Ruby",
-	"item.mmorpg.gems.ruby.6": "Divine Ruby",
-	"item.mmorpg.gems.sapphire.0": "Cracked Sapphire",
-	"item.mmorpg.gems.sapphire.1": "Chipped Sapphire",
-	"item.mmorpg.gems.sapphire.2": "Flawed Sapphire",
-	"item.mmorpg.gems.sapphire.3": "Regular Sapphire",
-	"item.mmorpg.gems.sapphire.4": "Grand Sapphire",
-	"item.mmorpg.gems.sapphire.5": "Glorious Sapphire",
-	"item.mmorpg.gems.sapphire.6": "Divine Sapphire",
-	"item.mmorpg.gems.topaz.0": "Cracked Topaz",
-	"item.mmorpg.gems.topaz.1": "Chipped Topaz",
-	"item.mmorpg.gems.topaz.2": "Flawed Topaz",
-	"item.mmorpg.gems.topaz.3": "Regular Topaz",
-	"item.mmorpg.gems.topaz.4": "Grand Topaz",
-	"item.mmorpg.gems.topaz.5": "Glorious Topaz",
-	"item.mmorpg.gems.topaz.6": "Divine Topaz",
-	"item.mmorpg.gems.tourmaline.0": "Cracked Tourmaline",
-	"item.mmorpg.gems.tourmaline.1": "Chipped Tourmaline",
-	"item.mmorpg.gems.tourmaline.2": "Flawed Tourmaline",
-	"item.mmorpg.gems.tourmaline.3": "Regular Tourmaline",
-	"item.mmorpg.gems.tourmaline.4": "Grand Tourmaline",
-	"item.mmorpg.gems.tourmaline.5": "Glorious Tourmaline",
-	"item.mmorpg.gems.tourmaline.6": "Divine Tourmaline",
+	"item.mmorpg.gems.azurite.0": "碎裂的青水晶",
+	"item.mmorpg.gems.azurite.1": "裂纹的青水晶",
+	"item.mmorpg.gems.azurite.2": "瑕疵的青水晶",
+	"item.mmorpg.gems.azurite.3": "普通的青水晶",
+	"item.mmorpg.gems.azurite.4": "恢弘的青水晶",
+	"item.mmorpg.gems.azurite.5": "辉耀的青水晶",
+	"item.mmorpg.gems.azurite.6": "神圣的青水晶",
+	"item.mmorpg.gems.emerald.0": "碎裂的绿宝石",
+	"item.mmorpg.gems.emerald.1": "裂纹的绿宝石",
+	"item.mmorpg.gems.emerald.2": "瑕疵的绿宝石",
+	"item.mmorpg.gems.emerald.3": "普通的绿宝石",
+	"item.mmorpg.gems.emerald.4": "恢弘的绿宝石",
+	"item.mmorpg.gems.emerald.5": "辉耀的绿宝石",
+	"item.mmorpg.gems.emerald.6": "神圣的绿宝石",
+	"item.mmorpg.gems.garnet.0": "碎裂的石榴石",
+	"item.mmorpg.gems.garnet.1": "裂纹的石榴石",
+	"item.mmorpg.gems.garnet.2": "瑕疵的石榴石",
+	"item.mmorpg.gems.garnet.3": "普通的石榴石",
+	"item.mmorpg.gems.garnet.4": "恢弘的石榴石",
+	"item.mmorpg.gems.garnet.5": "辉耀的石榴石",
+	"item.mmorpg.gems.garnet.6": "神圣的石榴石",
+	"item.mmorpg.gems.opal.0": "碎裂的蛋白石",
+	"item.mmorpg.gems.opal.1": "裂纹的蛋白石",
+	"item.mmorpg.gems.opal.2": "瑕疵的蛋白石",
+	"item.mmorpg.gems.opal.3": "普通的蛋白石",
+	"item.mmorpg.gems.opal.4": "恢弘的蛋白石",
+	"item.mmorpg.gems.opal.5": "辉耀的蛋白石",
+	"item.mmorpg.gems.opal.6": "神圣的蛋白石",
+	"item.mmorpg.gems.ruby.0": "碎裂的红宝石",
+	"item.mmorpg.gems.ruby.1": "裂纹的红宝石",
+	"item.mmorpg.gems.ruby.2": "瑕疵的红宝石",
+	"item.mmorpg.gems.ruby.3": "普通的红宝石",
+	"item.mmorpg.gems.ruby.4": "恢弘的红宝石",
+	"item.mmorpg.gems.ruby.5": "辉耀的红宝石",
+	"item.mmorpg.gems.ruby.6": "神圣的红宝石",
+	"item.mmorpg.gems.sapphire.0": "碎裂的蓝宝石",
+	"item.mmorpg.gems.sapphire.1": "裂纹的蓝宝石",
+	"item.mmorpg.gems.sapphire.2": "瑕疵的蓝宝石",
+	"item.mmorpg.gems.sapphire.3": "普通的蓝宝石",
+	"item.mmorpg.gems.sapphire.4": "恢弘的蓝宝石",
+	"item.mmorpg.gems.sapphire.5": "辉耀的蓝宝石",
+	"item.mmorpg.gems.sapphire.6": "神圣的蓝宝石",
+	"item.mmorpg.gems.topaz.0": "碎裂的黄玉",
+	"item.mmorpg.gems.topaz.1": "裂纹的黄玉",
+	"item.mmorpg.gems.topaz.2": "瑕疵的黄玉",
+	"item.mmorpg.gems.topaz.3": "普通的黄玉",
+	"item.mmorpg.gems.topaz.4": "恢弘的黄玉",
+	"item.mmorpg.gems.topaz.5": "辉耀的黄玉",
+	"item.mmorpg.gems.topaz.6": "神圣的黄玉",
+	"item.mmorpg.gems.tourmaline.0": "碎裂的碧玺",
+	"item.mmorpg.gems.tourmaline.1": "裂纹的碧玺",
+	"item.mmorpg.gems.tourmaline.2": "瑕疵的碧玺",
+	"item.mmorpg.gems.tourmaline.3": "普通的碧玺",
+	"item.mmorpg.gems.tourmaline.4": "恢弘的碧玺",
+	"item.mmorpg.gems.tourmaline.5": "辉耀的碧玺",
+	"item.mmorpg.gems.tourmaline.6": "神圣的碧玺",
 	"item.mmorpg.loot_crate.ench_exp_bag": "附魔经验箱",
 	"item.mmorpg.mat.modify_part": "幻想核心",
 	"item.mmorpg.mat.salvage.salvage0": "T0 - 回收粉尘",
