Add the localization for new way of organize gem name

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -95,7 +95,7 @@
 	"effect.mmorpg.fish": "海鲜增益",
 	"effect.mmorpg.potion": "药水增益",
 	
-	
+
 	"item.mmorpg.loot_crate.common": "普通物品战利品箱",
 	"item.mmorpg.loot_crate.magic": "魔法物品战利品箱",
 	"item.mmorpg.loot_crate.rare": "稀有物品战利品箱",
@@ -111,18 +111,70 @@
 	"mmorpg.one_of_a_kind.start": "开始",
 	
 	"curios.identifier.salvage_bag": "回收袋",
-	"mmorpg.chest_type.aura": "Aura",
-	"mmorpg.chest_type.currency": "Currency",
-	"mmorpg.chest_type.gear": "Gear",
-	"mmorpg.chest_type.gem": "Gem",
-	"mmorpg.chest_type.harvest_blue_chest": "Harvest Blue Chest",
-	"mmorpg.chest_type.harvest_green_chest": "Harvest Green Chest",
-	"mmorpg.chest_type.harvest_purple_chest": "Harvest Purple Chest",
-	"mmorpg.chest_type.map": "Map",
-	"mmorpg.chest_type.rune": "Rune",
-	"mmorpg.chest_type.support_gem": "Support Gem",
+	"mmorpg.chest_type.aura": "光环",
+	"mmorpg.chest_type.currency": "通货",
+	"mmorpg.chest_type.gear": "装备",
+	"mmorpg.chest_type.gem": "宝石",
+	"mmorpg.chest_type.harvest_blue_chest": "流明采集宝箱",
+	"mmorpg.chest_type.harvest_green_chest": "原始采集宝箱",
+	"mmorpg.chest_type.harvest_purple_chest": "混沌采集宝箱",
+	"mmorpg.chest_type.map": "地图",
+	"mmorpg.chest_type.rune": "符文",
+	"mmorpg.chest_type.support_gem": "支援宝石",
 	"_comment": " [CATEGORY]: MISC - NAMES",
 	
+	"mmorpg.gem_rank.chipped": "裂纹的",
+	"mmorpg.gem_rank.cracked": "碎裂的",
+	"mmorpg.gem_rank.divine": "神圣的",
+	"mmorpg.gem_rank.flawed": "瑕疵的",
+	"mmorpg.gem_rank.glorious": "辉耀的",
+	"mmorpg.gem_rank.grand": "恢弘的",
+	"mmorpg.gem_rank.regular": "普通的",
+	"mmorpg.gem_type.amethyst": "紫水晶",
+	"mmorpg.gem_type.azurite": "青水晶",
+	"mmorpg.gem_type.emerald": "绿宝石",
+	"mmorpg.gem_type.garnet": "石榴石",
+	"mmorpg.gem_type.opal": "蛋白石",
+	"mmorpg.gem_type.ruby": "红宝石",
+	"mmorpg.gem_type.sapphire": "蓝宝石",
+	"mmorpg.gem_type.topaz": "黄玉",
+	"mmorpg.gem_type.tourmaline": "碧玺",
+	"mmorpg.item_tips.aura_reservation": "Aura Reservation: ",
+	"mmorpg.item_tips.chest_contains": "Contains: ",
+	"mmorpg.item_tips.cor_stats": "Base Stats: ",
+	"mmorpg.item_tips.durability": "Durability: ",
+	"mmorpg.item_tips.empty_socket": "[Socket]",
+	"mmorpg.item_tips.enchanted": "Enchanted: ",
+	"mmorpg.item_tips.exp": "Exp: %1$s%%",
+	"mmorpg.item_tips.gem_open_gui_tip": "Right Click to Open Gui",
+	"mmorpg.item_tips.item_tier_tip": "Item Tier: ",
+	"mmorpg.item_tips.item_type": "Item Type: ",
+	"mmorpg.item_tips.level_tip": "Level: ",
+	"mmorpg.item_tips.loot": "Loot: %1$s%%",
+	"mmorpg.item_tips.map_league_spawn": "Can Spawn: ",
+	"mmorpg.item_tips.need_key": "Needs Key: ",
+	"mmorpg.item_tips.outcome_tip": "%1$s, Base Weight: %2$s",
+	"mmorpg.item_tips.potential": "Potential: %1$s%%",
+	"mmorpg.item_tips.prefix_stats": "Prefix Stats: ",
+	"mmorpg.item_tips.quality": "Quality: %1$s%%",
+	"mmorpg.item_tips.rarity_tip": "Rarity: ",
+	"mmorpg.item_tips.remaining_aura_capacity": "Remaining Aura Capacity: ",
+	"mmorpg.item_tips.restores": "Restores: %1$s%%",
+	"mmorpg.item_tips.rune_item_usage": "All Runewords are shown in the Wiki.\nUse to view craftable Runewords.",
+	"mmorpg.item_tips.socket_extractor_usage": "Click on gear to extract a gem.",
+	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "Click on items to remove their soul.\nThe item remains but the stats will be deleted.",
+	"mmorpg.item_tips.soul_extractor_tip": "Click on items to extract their soul.\nWorks only on that rarity.\nDeletes the Item in the process.",
+	"mmorpg.item_tips.soul_stone_tip": "Right click to produce a common gear soul.",
+	"mmorpg.item_tips.stat_req": "%1$s Min: ",
+	"mmorpg.item_tips.stone_repaire_durability": "Repairs %1$s durability.",
+	"mmorpg.item_tips.suffix_stats": "Suffix Stats: ",
+	"mmorpg.item_tips.support_gem_cost": "Resource Cost Multiplier: %1$s%%",
+	"mmorpg.item_tips.support_gem_only_one": "Only One Allowed: ",
+	"mmorpg.item_tips.tier_tip": "Tier: ",
+	"mmorpg.item_tips.tp_back_item": "Right click to return from the Map\nExits the Map Dimension.",
+	"mmorpg.item_tips.unbreakable": "Unbreakable",
+	"mmorpg.item_tips.unique_jewel_use": "Right click to create",
+	"mmorpg.item_tips.use_tip": "[Drag onto gear to use]",
 	"mmorpg.mob_affix.chaos_mob_affix": "§5☀混沌",
 	"mmorpg.mob_affix.fire_lord": "§c☀火之领主",
 	"mmorpg.mob_affix.fire_mob_affix": "§c☀火焰",
