replace old mod affix with new ones

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -175,19 +175,18 @@
 	"mmorpg.item_tips.unbreakable": "Unbreakable",
 	"mmorpg.item_tips.unique_jewel_use": "Right click to create",
 	"mmorpg.item_tips.use_tip": "[Drag onto gear to use]",
-	"mmorpg.mob_affix.chaos_mob_affix": "§5☀混沌",
-	"mmorpg.mob_affix.fire_lord": "§c☀火之领主",
-	"mmorpg.mob_affix.fire_mob_affix": "§c☀火焰",
-	"mmorpg.mob_affix.full_fire": "§c☀纯火",
-	"mmorpg.mob_affix.full_lightning": "§e☀纯雷",
-	"mmorpg.mob_affix.full_water": "§b☀纯冰",
-	"mmorpg.mob_affix.nature_lord": "§5☀自然之领主",
-	"mmorpg.mob_affix.phys_lord": "§6☀物理之领主",
-	"mmorpg.mob_affix.reflect": "§b❁反射",
-	"mmorpg.mob_affix.thorny_mobs": "§b❁荆棘",
-	"mmorpg.mob_affix.vampire": "§c❁吸血鬼",
-	"mmorpg.mob_affix.water_mob_affix": "§b☀冰冻",
-	"mmorpg.mob_affix.winter": "§b☀冬天",
+	"mmorpg.mob_affix.chaos_mob_affix": "Poisoned",
+	"mmorpg.mob_affix.fire_lord": "Fire Lord",
+	"mmorpg.mob_affix.fire_mob_affix": "Flaming",
+	"mmorpg.mob_affix.full_chaos": "Of Chaos",
+	"mmorpg.mob_affix.full_fire": "Of Fire",
+	"mmorpg.mob_affix.full_lightning": "Of Lightning",
+	"mmorpg.mob_affix.full_water": "Of Cold",
+	"mmorpg.mob_affix.nature_lord": "Chaos Lord",
+	"mmorpg.mob_affix.phys_lord": "Fighter Lord",
+	"mmorpg.mob_affix.vampire": "Vampriric",
+	"mmorpg.mob_affix.water_mob_affix": "Freezing",
+	"mmorpg.mob_affix.winter": "Winter Lord",
 	"item.mmorpg.backpack.0": "§7普通背包",
 	"item.mmorpg.backpack.1": "§a稀有背包",
 	"item.mmorpg.backpack.2": "§b罕见背包",
