doing more tips

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -139,23 +139,23 @@
 	"mmorpg.gem_type.sapphire": "蓝宝石",
 	"mmorpg.gem_type.topaz": "黄玉",
 	"mmorpg.gem_type.tourmaline": "碧玺",
-	"mmorpg.item_tips.aura_reservation": "Aura Reservation: ",
-	"mmorpg.item_tips.chest_contains": "Contains: ",
-	"mmorpg.item_tips.cor_stats": "Base Stats: ",
-	"mmorpg.item_tips.durability": "Durability: ",
-	"mmorpg.item_tips.empty_socket": "[Socket]",
-	"mmorpg.item_tips.enchanted": "Enchanted: ",
-	"mmorpg.item_tips.exp": "Exp: %1$s%%",
-	"mmorpg.item_tips.gem_open_gui_tip": "Right Click to Open Gui",
-	"mmorpg.item_tips.item_tier_tip": "Item Tier: ",
-	"mmorpg.item_tips.item_type": "Item Type: ",
-	"mmorpg.item_tips.level_tip": "Level: ",
-	"mmorpg.item_tips.loot": "Loot: %1$s%%",
-	"mmorpg.item_tips.map_league_spawn": "Can Spawn: ",
-	"mmorpg.item_tips.need_key": "Needs Key: ",
-	"mmorpg.item_tips.outcome_tip": "%1$s, Base Weight: %2$s",
-	"mmorpg.item_tips.potential": "Potential: %1$s%%",
-	"mmorpg.item_tips.prefix_stats": "Prefix Stats: ",
+	"mmorpg.item_tips.aura_reservation": "光环储备：",
+	"mmorpg.item_tips.chest_contains": "包含：",
+	"mmorpg.item_tips.cor_stats": "基础属性：",
+	"mmorpg.item_tips.durability": "耐久度：",
+	"mmorpg.item_tips.empty_socket": "[插槽]",
+	"mmorpg.item_tips.enchanted": "强化：",
+	"mmorpg.item_tips.exp": "经验：%1$s%%",
+	"mmorpg.item_tips.gem_open_gui_tip": "右键以打开GUI",
+	"mmorpg.item_tips.item_tier_tip": "物品品阶：",
+	"mmorpg.item_tips.item_type": "物品类型：",
+	"mmorpg.item_tips.level_tip": "等级：",
+	"mmorpg.item_tips.loot": "战利品：%1$s%%",
+	"mmorpg.item_tips.map_league_spawn": "可以生成：",
+	"mmorpg.item_tips.need_key": "需要钥匙：",
+	"mmorpg.item_tips.outcome_tip": "%1$s,基础权重：%2$s",
+	"mmorpg.item_tips.potential": "潜力：%1$s%%",
+	"mmorpg.item_tips.prefix_stats": "前缀属性",
 	"mmorpg.item_tips.quality": "Quality: %1$s%%",
 	"mmorpg.item_tips.rarity_tip": "Rarity: ",
 	"mmorpg.item_tips.remaining_aura_capacity": "Remaining Aura Capacity: ",
