remove old backpack strings

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -156,13 +156,13 @@
 	"mmorpg.item_tips.outcome_tip": "%1$s,基础权重：%2$s",
 	"mmorpg.item_tips.potential": "潜力：%1$s%%",
 	"mmorpg.item_tips.prefix_stats": "前缀属性",
-	"mmorpg.item_tips.quality": "Quality: %1$s%%",
-	"mmorpg.item_tips.rarity_tip": "Rarity: ",
-	"mmorpg.item_tips.remaining_aura_capacity": "Remaining Aura Capacity: ",
-	"mmorpg.item_tips.restores": "Restores: %1$s%%",
-	"mmorpg.item_tips.rune_item_usage": "All Runewords are shown in the Wiki.\nUse to view craftable Runewords.",
-	"mmorpg.item_tips.socket_extractor_usage": "Click on gear to extract a gem.",
-	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "Click on items to remove their soul.\nThe item remains but the stats will be deleted.",
+	"mmorpg.item_tips.quality": "质量：%1$s%%",
+	"mmorpg.item_tips.rarity_tip": "稀有度",
+	"mmorpg.item_tips.remaining_aura_capacity": "剩余光环容量：",
+	"mmorpg.item_tips.restores": "恢复：%1$s%%",
+	"mmorpg.item_tips.rune_item_usage": "所有的符文之语都写在百科中，\n使用以查看可以合成的符文之语。",
+	"mmorpg.item_tips.socket_extractor_usage": "点击到一个装备上以提取一个宝石。",
+	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "点到物品上以移除其灵魂。\n物品将会保留，但属性将会被删除。",
 	"mmorpg.item_tips.soul_extractor_tip": "Click on items to extract their soul.\nWorks only on that rarity.\nDeletes the Item in the process.",
 	"mmorpg.item_tips.soul_stone_tip": "Right click to produce a common gear soul.",
 	"mmorpg.item_tips.stat_req": "%1$s Min: ",
@@ -187,12 +187,15 @@
 	"mmorpg.mob_affix.vampire": "Vampriric",
 	"mmorpg.mob_affix.water_mob_affix": "Freezing",
 	"mmorpg.mob_affix.winter": "Winter Lord",
-	"item.mmorpg.backpack.0": "§7普通背包",
-	"item.mmorpg.backpack.1": "§a稀有背包",
-	"item.mmorpg.backpack.2": "§b罕见背包",
-	"item.mmorpg.backpack.3": "§d史诗背包",
-	"item.mmorpg.backpack.4": "§6传说背包",
-	"item.mmorpg.backpack.5": "§5神话背包",
+	"mmorpg.profession.alchemy": "Alchemy",
+	"mmorpg.profession.cooking": "Cooking",
+	"mmorpg.profession.enchanting": "Enchanting",
+	"mmorpg.profession.farming": "Farming",
+	"mmorpg.profession.fishing": "Fishing",
+	"mmorpg.profession.gear_crafting": "Gear Crafting",
+	"mmorpg.profession.husbandry": "Husbandry",
+	"mmorpg.profession.mining": "Mining",
+	"mmorpg.profession.salvaging": "Salvaging",
 	"item.mmorpg.chest.common_gear": "普通装备宝箱",
 	"item.mmorpg.chest.currency": "货币宝箱",
 	"item.mmorpg.chest.epic_gear": "史诗装备宝箱",
