--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -162,114 +162,77 @@
 	"mmorpg.item_tips.restores": "恢复：%1$s%%",
 	"mmorpg.item_tips.rune_item_usage": "所有的符文之语都写在百科中，\n使用以查看可以合成的符文之语。",
 	"mmorpg.item_tips.socket_extractor_usage": "点击到一个装备上以提取一个宝石。",
-	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "点到物品上以移除其灵魂。\n物品将会保留，但属性将会被删除。",
-	"mmorpg.item_tips.soul_extractor_tip": "Click on items to extract their soul.\nWorks only on that rarity.\nDeletes the Item in the process.",
-	"mmorpg.item_tips.soul_stone_tip": "Right click to produce a common gear soul.",
-	"mmorpg.item_tips.stat_req": "%1$s Min: ",
-	"mmorpg.item_tips.stone_repaire_durability": "Repairs %1$s durability.",
-	"mmorpg.item_tips.suffix_stats": "Suffix Stats: ",
-	"mmorpg.item_tips.support_gem_cost": "Resource Cost Multiplier: %1$s%%",
-	"mmorpg.item_tips.support_gem_only_one": "Only One Allowed: ",
-	"mmorpg.item_tips.tier_tip": "Tier: ",
-	"mmorpg.item_tips.tp_back_item": "Right click to return from the Map\nExits the Map Dimension.",
-	"mmorpg.item_tips.unbreakable": "Unbreakable",
-	"mmorpg.item_tips.unique_jewel_use": "Right click to create",
-	"mmorpg.item_tips.use_tip": "[Drag onto gear to use]",
-	"mmorpg.mob_affix.chaos_mob_affix": "Poisoned",
-	"mmorpg.mob_affix.fire_lord": "Fire Lord",
-	"mmorpg.mob_affix.fire_mob_affix": "Flaming",
-	"mmorpg.mob_affix.full_chaos": "Of Chaos",
-	"mmorpg.mob_affix.full_fire": "Of Fire",
-	"mmorpg.mob_affix.full_lightning": "Of Lightning",
-	"mmorpg.mob_affix.full_water": "Of Cold",
-	"mmorpg.mob_affix.nature_lord": "Chaos Lord",
-	"mmorpg.mob_affix.phys_lord": "Fighter Lord",
-	"mmorpg.mob_affix.vampire": "Vampriric",
-	"mmorpg.mob_affix.water_mob_affix": "Freezing",
-	"mmorpg.mob_affix.winter": "Winter Lord",
-	"mmorpg.profession.alchemy": "Alchemy",
-	"mmorpg.profession.cooking": "Cooking",
-	"mmorpg.profession.enchanting": "Enchanting",
-	"mmorpg.profession.farming": "Farming",
-	"mmorpg.profession.fishing": "Fishing",
-	"mmorpg.profession.gear_crafting": "Gear Crafting",
-	"mmorpg.profession.husbandry": "Husbandry",
-	"mmorpg.profession.mining": "Mining",
-	"mmorpg.profession.salvaging": "Salvaging",
-	"item.mmorpg.chest.common_gear": "普通装备宝箱",
-	"item.mmorpg.chest.currency": "货币宝箱",
-	"item.mmorpg.chest.epic_gear": "史诗装备宝箱",
-	"item.mmorpg.chest.harvest_blue": "流明采集宝箱",
-	"item.mmorpg.chest.harvest_green": "原始采集宝箱",
-	"item.mmorpg.chest.harvest_purple": "混沌采集宝箱",
-	"item.mmorpg.chest.legendary_gear": "传说装备宝箱",
-	"item.mmorpg.chest.mythic_gear": "神话装备宝箱",
-	"item.mmorpg.chest.rare_gear": "稀有装备宝箱",
-	"item.mmorpg.chest.uncommon_gear": "非凡装备宝箱",
-	"item.mmorpg.common_soul_produce": "普通装备灵魂石",
-	"item.mmorpg.gems.amethyst.0": "破碎紫水晶",
-	"item.mmorpg.gems.amethyst.1": "裂缝紫水晶",
-	"item.mmorpg.gems.amethyst.2": "有缺陷紫水晶",
-	"item.mmorpg.gems.amethyst.3": "普通紫水晶",
-	"item.mmorpg.gems.amethyst.4": "宏伟紫水晶",
-	"item.mmorpg.gems.amethyst.5": "辉煌紫水晶",
-	"item.mmorpg.gems.amethyst.6": "神圣紫水晶",
-	"item.mmorpg.gems.azurite.0": "破碎青金石",
-	"item.mmorpg.gems.azurite.1": "裂缝青金石",
-	"item.mmorpg.gems.azurite.2": "有缺陷青金石",
-	"item.mmorpg.gems.azurite.3": "普通青金石",
-	"item.mmorpg.gems.azurite.4": "宏伟青金石",
-	"item.mmorpg.gems.azurite.5": "辉煌青金石",
-	"item.mmorpg.gems.azurite.6": "神圣青金石",
-	"item.mmorpg.gems.emerald.0": "破碎绿宝石",
-	"item.mmorpg.gems.emerald.1": "裂缝绿宝石",
-	"item.mmorpg.gems.emerald.2": "有缺陷绿宝石",
-	"item.mmorpg.gems.emerald.3": "普通绿宝石",
-	"item.mmorpg.gems.emerald.4": "宏伟绿宝石",
-	"item.mmorpg.gems.emerald.5": "辉煌绿宝石",
-	"item.mmorpg.gems.emerald.6": "神圣绿宝石",
-	"item.mmorpg.gems.garnet.0": "破碎石榴石",
-	"item.mmorpg.gems.garnet.1": "裂缝石榴石",
-	"item.mmorpg.gems.garnet.2": "有缺陷石榴石",
-	"item.mmorpg.gems.garnet.3": "普通石榴石",
-	"item.mmorpg.gems.garnet.4": "宏伟石榴石",
-	"item.mmorpg.gems.garnet.5": "辉煌石榴石",
-	"item.mmorpg.gems.garnet.6": "神圣石榴石",
-	"item.mmorpg.gems.opal.0": "破碎蛋白石",
-	"item.mmorpg.gems.opal.1": "裂缝蛋白石",
-	"item.mmorpg.gems.opal.2": "有缺陷蛋白石",
-	"item.mmorpg.gems.opal.3": "普通蛋白石",
-	"item.mmorpg.gems.opal.4": "宏伟蛋白石",
-	"item.mmorpg.gems.opal.5": "辉煌蛋白石",
-	"item.mmorpg.gems.opal.6": "神圣蛋白石",
-	"item.mmorpg.gems.ruby.0": "破碎红宝石",
-	"item.mmorpg.gems.ruby.1": "裂缝红宝石",
-	"item.mmorpg.gems.ruby.2": "有缺陷红宝石",
-	"item.mmorpg.gems.ruby.3": "普通红宝石",
-	"item.mmorpg.gems.ruby.4": "宏伟红宝石",
-	"item.mmorpg.gems.ruby.5": "辉煌红宝石",
-	"item.mmorpg.gems.ruby.6": "神圣红宝石",
-	"item.mmorpg.gems.sapphire.0": "破碎蓝宝石",
-	"item.mmorpg.gems.sapphire.1": "裂缝蓝宝石",
-	"item.mmorpg.gems.sapphire.2": "有缺陷蓝宝石",
-	"item.mmorpg.gems.sapphire.3": "普通蓝宝石",
-	"item.mmorpg.gems.sapphire.4": "宏伟蓝宝石",
-	"item.mmorpg.gems.sapphire.5": "辉煌蓝宝石",
-	"item.mmorpg.gems.sapphire.6": "神圣蓝宝石",
-	"item.mmorpg.gems.topaz.0": "破碎黄玉",
-	"item.mmorpg.gems.topaz.1": "裂缝黄玉",
-	"item.mmorpg.gems.topaz.2": "有缺陷黄玉",
-	"item.mmorpg.gems.topaz.3": "普通黄玉",
-	"item.mmorpg.gems.topaz.4": "宏伟黄玉",
-	"item.mmorpg.gems.topaz.5": "辉煌黄玉",
-	"item.mmorpg.gems.topaz.6": "神圣黄玉",
-	"item.mmorpg.gems.tourmaline.0": "破碎碧玺",
-	"item.mmorpg.gems.tourmaline.1": "裂缝碧玺",
-	"item.mmorpg.gems.tourmaline.2": "有缺陷碧玺",
-	"item.mmorpg.gems.tourmaline.3": "普通碧玺",
-	"item.mmorpg.gems.tourmaline.4": "宏伟碧玺",
-	"item.mmorpg.gems.tourmaline.5": "辉煌碧玺",
-	"item.mmorpg.gems.tourmaline.6": "神圣碧玺",
+	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "点击到物品上以移除其灵魂。\n物品将会保留，但属性将会被删除。",
+	"mmorpg.item_tips.soul_extractor_tip": "点击到物品上以移除其灵魂。\n只能用于同样的稀有度上。\n在此过程中会删除物品。",
+	"mmorpg.item_tips.soul_stone_tip": "右键以产生一个普通级装备灵魂。",
+	"mmorpg.item_tips.stat_req": "%1$s最少要：",
+	"mmorpg.item_tips.stone_repaire_durability": "修复%1$s耐久度.",
+	"mmorpg.item_tips.suffix_stats": "后缀属性：",
+	"mmorpg.item_tips.support_gem_cost": "资源消耗乘数：%1$s%%",
+	"mmorpg.item_tips.support_gem_only_one": "只允许一个：",
+	"mmorpg.item_tips.tier_tip": "品阶：",
+	"mmorpg.item_tips.tp_back_item": "右键以从地图中返回\n退出地图维度",
+	"mmorpg.item_tips.unbreakable": "不可摧毁",
+	"mmorpg.item_tips.unique_jewel_use": "右键以生成",
+	"mmorpg.item_tips.use_tip": "[拖到装备上使用]",
+	"mmorpg.mob_affix.chaos_mob_affix": "剧毒",
+	"mmorpg.mob_affix.fire_lord": "火焰领主",
+	"mmorpg.mob_affix.fire_mob_affix": "烈焰",
+	"mmorpg.mob_affix.full_chaos": "混沌之",
+	"mmorpg.mob_affix.full_fire": "火焰之",
+	"mmorpg.mob_affix.full_lightning": "雷霆之",
+	"mmorpg.mob_affix.full_water": "寒冷之",
+	"mmorpg.mob_affix.nature_lord": "混沌领主",
+	"mmorpg.mob_affix.phys_lord": "战士领主",
+	"mmorpg.mob_affix.vampire": "吸血",
+	"mmorpg.mob_affix.water_mob_affix": "冻结",
+	"mmorpg.mob_affix.winter": "寒冬领主",
+	"mmorpg.profession.alchemy": "炼金术",
+	"mmorpg.profession.cooking": "烹饪",
+	"mmorpg.profession.enchanting": "强化术",
+	"mmorpg.profession.farming": "农业",
+	"mmorpg.profession.fishing": "钓鱼",
+	"mmorpg.profession.gear_crafting": "装备打造",
+	"mmorpg.profession.husbandry": "畜牧",
+	"mmorpg.profession.mining": "挖矿",
+	"mmorpg.profession.salvaging": "回收",
+	"item.mmorpg.chest.common_gear": "战利品箱",
+	"item.mmorpg.chest.currency": "战利品箱",
+	"item.mmorpg.chest.epic_gear": "战利品箱",
+	"item.mmorpg.chest.harvest_blue": "战利品箱",
+	"item.mmorpg.chest.harvest_green": "战利品箱",
+	"item.mmorpg.chest.harvest_purple": "战利品箱",
+	"item.mmorpg.chest.legendary_gear": "战利品箱",
+	"item.mmorpg.chest.mythic_gear": "战利品箱",
+	"item.mmorpg.chest.rare_gear": "战利品箱",
+	"item.mmorpg.chest.uncommon_gear": "战利品箱",
+	"item.mmorpg.cloth_set": "服装灵魂修正",
+	"item.mmorpg.common_soul_produce": "普通级装备灵魂石",
+	"item.mmorpg.destroy_output_exp": "拆解者的习得方法",
+	"item.mmorpg.enchantment.family.armor.common": "\u00A77Common Armor Enchantment",
+	"item.mmorpg.enchantment.family.armor.epic": "\u00A7dEpic Armor Enchantment",
+	"item.mmorpg.enchantment.family.armor.legendary": "\u00A76Legendary Armor Enchantment",
+	"item.mmorpg.enchantment.family.armor.mythic": "\u00A75Mythic Armor Enchantment",
+	"item.mmorpg.enchantment.family.armor.rare": "\u00A7bRare Armor Enchantment",
+	"item.mmorpg.enchantment.family.armor.uncommon": "\u00A7aUncommon Armor Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.common": "\u00A77Common Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.epic": "\u00A7dEpic Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.legendary": "\u00A76Legendary Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.mythic": "\u00A75Mythic Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.rare": "\u00A7bRare Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.jewelry.uncommon": "\u00A7aUncommon Jewelry Enchantment",
+	"item.mmorpg.enchantment.family.offhand.common": "\u00A77Common OffHand Enchantment",
+	"item.mmorpg.enchantment.family.offhand.epic": "\u00A7dEpic OffHand Enchantment",
+	"item.mmorpg.enchantment.family.offhand.legendary": "\u00A76Legendary OffHand Enchantment",
+	"item.mmorpg.enchantment.family.offhand.mythic": "\u00A75Mythic OffHand Enchantment",
+	"item.mmorpg.enchantment.family.offhand.rare": "\u00A7bRare OffHand Enchantment",
+	"item.mmorpg.enchantment.family.offhand.uncommon": "\u00A7aUncommon OffHand Enchantment",
+	"item.mmorpg.enchantment.family.weapon.common": "\u00A77Common Weapon Enchantment",
+	"item.mmorpg.enchantment.family.weapon.epic": "\u00A7dEpic Weapon Enchantment",
+	"item.mmorpg.enchantment.family.weapon.legendary": "\u00A76Legendary Weapon Enchantment",
+	"item.mmorpg.enchantment.family.weapon.mythic": "\u00A75Mythic Weapon Enchantment",
+	"item.mmorpg.enchantment.family.weapon.rare": "\u00A7bRare Weapon Enchantment",
+	"item.mmorpg.enchantment.family.weapon.uncommon": "\u00A7aUncommon Weapon Enchantment",
 	"item.mmorpg.harvest.blue_ingot": "流明锭",
 	"item.mmorpg.harvest.blue_key": "流明钥匙",
 	"item.mmorpg.harvest.blue_plant": "流明精华",
@@ -279,6 +242,57 @@
 	"item.mmorpg.harvest.purple_ingot": "混沌锭",
 	"item.mmorpg.harvest.purple_key": "混沌钥匙",
 	"item.mmorpg.harvest.purple_plant": "混沌精华",
+	"item.mmorpg.keys.0": "Common Key",
+	"item.mmorpg.keys.1": "Uncommon Key",
+	"item.mmorpg.keys.2": "Rare Key",
+	"item.mmorpg.keys.3": "Epic Key",
+	"item.mmorpg.keys.4": "Legendary Key",
+	"item.mmorpg.keys.5": "Mythic Key",
+	"item.mmorpg.leather_set": "Leather Soul Modifier",
+	"item.mmorpg.master_bag": "\u00A75Master Backpack",
+	"item.mmorpg.material.farming.0": "Spiritual Produce",
+	"item.mmorpg.material.farming.1": "Celestial Produce",
+	"item.mmorpg.material.farming.2": "Empyrean Produce",
+	"item.mmorpg.material.farming.3": "Angelic Produce",
+	"item.mmorpg.material.farming.4": "Divine Produce",
+	"item.mmorpg.material.farming.5": "Godly Produce",
+	"item.mmorpg.material.fishing.0": "Spiritual Raw Fish",
+	"item.mmorpg.material.fishing.1": "Celestial Raw Fish",
+	"item.mmorpg.material.fishing.2": "Empyrean Raw Fish",
+	"item.mmorpg.material.fishing.3": "Angelic Raw Fish",
+	"item.mmorpg.material.fishing.4": "Divine Raw Fish",
+	"item.mmorpg.material.fishing.5": "Godly Raw Fish",
+	"item.mmorpg.material.meat.0": "Spiritual Raw Meat",
+	"item.mmorpg.material.meat.1": "Celestial Raw Meat",
+	"item.mmorpg.material.meat.2": "Empyrean Raw Meat",
+	"item.mmorpg.material.meat.3": "Angelic Raw Meat",
+	"item.mmorpg.material.meat.4": "Divine Raw Meat",
+	"item.mmorpg.material.meat.5": "Godly Raw Meat",
+	"item.mmorpg.material.mining.0": "Spiritual Ore",
+	"item.mmorpg.material.mining.1": "Celestial Ore",
+	"item.mmorpg.material.mining.2": "Empyrean Ore",
+	"item.mmorpg.material.mining.3": "Angelic Ore",
+	"item.mmorpg.material.mining.4": "Divine Ore",
+	"item.mmorpg.material.mining.5": "Godly Ore",
+	"item.mmorpg.offhand.dodge.diamond": "Totem",
+	"item.mmorpg.offhand.dodge.iron": "Totem",
+	"item.mmorpg.offhand.dodge.wood": "Totem",
+	"item.mmorpg.offhand.tome.diamond": "Tome",
+	"item.mmorpg.offhand.tome.iron": "Tome",
+	"item.mmorpg.offhand.tome.wood": "Tome",
+	"item.mmorpg.plate_set": "Plate Soul Modifier",
+	"item.mmorpg.potion.health.0": "\u00A77Common Restoration Potion",
+	"item.mmorpg.potion.health.1": "\u00A7aUncommon Restoration Potion",
+	"item.mmorpg.potion.health.2": "\u00A7bRare Restoration Potion",
+	"item.mmorpg.potion.health.3": "\u00A7dEpic Restoration Potion",
+	"item.mmorpg.potion.health.4": "\u00A76Legendary Restoration Potion",
+	"item.mmorpg.potion.health.5": "\u00A75Mythic Restoration Potion",
+	"item.mmorpg.potion.resource.0": "\u00A77Common Invigoration Potion",
+	"item.mmorpg.potion.resource.1": "\u00A7aUncommon Invigoration Potion",
+	"item.mmorpg.potion.resource.2": "\u00A7bRare Invigoration Potion",
+	"item.mmorpg.potion.resource.3": "\u00A7dEpic Invigoration Potion",
+	"item.mmorpg.potion.resource.4": "\u00A76Legendary Invigoration Potion",
+	"item.mmorpg.potion.resource.5": "\u00A75Mythic Invigoration Potion",
 	"item.mmorpg.potions.add_reset_perk_points": "单点天赋重置药水",
 	"item.mmorpg.potions.reset_all_perks": "天赋全重置药水",
 	"item.mmorpg.potions.reset_spells": "职业重置药水",
@@ -288,6 +302,21 @@
 	"item.mmorpg.projectile.lightning": "投掷物",
 	"item.mmorpg.projectile.slimeball": "投掷物",
 	"item.mmorpg.projectile.snowball": "投掷物",
+	"item.mmorpg.rare_mats.farming.greater": "Greater Produce",
+	"item.mmorpg.rare_mats.farming.lesser": "Lesser Produce",
+	"item.mmorpg.rare_mats.farming.medium": "Medium Produce",
+	"item.mmorpg.rare_mats.fishing.greater": "Greater Fish",
+	"item.mmorpg.rare_mats.fishing.lesser": "Lesser Fish",
+	"item.mmorpg.rare_mats.fishing.medium": "Medium Fish",
+	"item.mmorpg.rare_mats.husbandry.greater": "Greater Beef",
+	"item.mmorpg.rare_mats.husbandry.lesser": "Lesser Beef",
+	"item.mmorpg.rare_mats.husbandry.medium": "Medium Beef",
+	"item.mmorpg.rare_mats.mining.greater": "Greater Crystal",
+	"item.mmorpg.rare_mats.mining.lesser": "Lesser Crystal",
+	"item.mmorpg.rare_mats.mining.medium": "Medium Crystal",
+	"item.mmorpg.rare_mats.salvaging.greater": "Greater Essence",
+	"item.mmorpg.rare_mats.salvaging.lesser": "Lesser Essence",
+	"item.mmorpg.rare_mats.salvaging.medium": "Medium Essence",
 	"item.mmorpg.runes.ano": "安诺符文",
 	"item.mmorpg.runes.cen": "岑符文",
 	"item.mmorpg.runes.dos": "多斯符文",
